fix overflow for bevy name in admin modal

--- a/public/less/bevy/AdminModal.less
+++ b/public/less/bevy/AdminModal.less
@@ -9,6 +9,12 @@
   .modal-dialog {
     width: 320px !important;
   }
+  .modal-header {
+    .modal-title {
+      overflow-x: hidden;
+      text-overflow: ellipsis;
+    }
+  }
   .modal-body {
     .admin-item {
       display: flex;
